Migrate to new groupId